MET-1331 more memory for tests, new xsd